--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -10,4 +10,25 @@ spring:
   jta.atomikos.datasource:
     max-pool-size: 32
     min-pool-size: 8
+  cache:
+    type: none
+server:
+  port: 8812
+  servlet:
+    context-path: /syfoperson
 
+securitytokenservice.url: "sts.url"
+srvsyfomotebehov:
+  username: "username"
+  password: "password"
+
+no.nav.security.oidc:
+  issuers: selvbetjening
+  issuer:
+    selvbetjening.discoveryurl: http://metadata
+    selvbetjening.accepted_audience: aud-localhost
+    selvbetjening.cookie_name: localhost-idtoken
+
+fasit.environment.name: 'local'
+
+dev: true
