--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.6.RELEASE</version>
+        <version>2.0.4.RELEASE</version>
     </parent>
 
     <distributionManagement>
@@ -38,7 +38,9 @@
         <java.version>1.8</java.version>
         <kotlin.version>1.2.71</kotlin.version>
         <javax.inject.version>1</javax.inject.version>
-        <spring-boot.version>2.0.6.RELEASE</spring-boot.version>
+        <javax.ws.rs.version>2.0.1</javax.ws.rs.version>
+        <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
+        <spring.version>5.0.7.RELEASE</spring.version>
         <jose4j.version>0.5.0</jose4j.version>
         <logstash-logback-encoder.version>4.10</logstash-logback-encoder.version>
         <ojdbc8.version>12.2.0.1</ojdbc8.version>
@@ -46,6 +48,7 @@
         <flyway-core.version>5.0.7</flyway-core.version>
         <lombok.version>1.16.22</lombok.version>
         <oidc-spring-support.version>0.2.4</oidc-spring-support.version>
+        <cxf.version>3.2.0</cxf.version>
     </properties>
 
     <dependencies>
@@ -65,6 +68,28 @@
             <groupId>no.nav.security</groupId>
             <artifactId>oidc-support</artifactId>
             <version>${oidc-spring-support.version}</version>
+        </dependency>
+
+        <!-- CXF -->
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-features-logging</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-ws-security</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-ws-policy</artifactId>
+            <version>${cxf.version}</version>
         </dependency>
 
 
@@ -163,6 +188,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
