--- a/nais.yaml
+++ b/nais.yaml
@@ -5,6 +5,17 @@ replicas:
   max: 2
   cpuThresholdPercentage: 90
 port: 8080
+healthcheck:
+  liveness:
+    path: /internal/isAlive
+    initialDelay: 120
+    timeout: 1
+    periodSeconds: 10
+    failureThreshold: 3
+  readiness:
+    path: /internal/isReady
+    initialDelay: 60
+    timeout: 1
 prometheus:
   enabled: true
   path: /internal/prometheus
