Disabler helsesjekk paa database
Applikasjonen feiler ved oppstart siden syfopersonDB ikke er opprettet ennaa

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,9 @@ management:
     base-path: /internal
     exposure.include: prometheus
     path-mapping.prometheus: /prometheus
+  health:
+    db:
+      enabled: false
 
 server:
   servlet:
