--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,9 @@ management:
     base-path: /internal
     exposure.include: prometheus
     path-mapping.prometheus: /prometheus
+  endpoint:
+    flyway:
+      enabled: false
   health:
     db:
       enabled: false
