--- a/nais.yaml
+++ b/nais.yaml
@@ -8,18 +8,18 @@ replicas:
 port: 8080
 healthcheck:
   liveness:
-    path: /internal/isAlive
+    path: /syfoperson/internal/isAlive
     initialDelay: 120
     timeout: 1
     periodSeconds: 10
     failureThreshold: 3
   readiness:
-    path: /internal/isReady
+    path: /syfoperson/internal/isReady
     initialDelay: 60
     timeout: 1
 prometheus:
   enabled: true
-  path: /internal/prometheus
+  path: /syfoperson/internal/prometheus
 resources:
   limits:
     cpu: 1000m
