--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <javax.ws.rs.version>2.0.1</javax.ws.rs.version>
         <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
         <spring.version>5.0.7.RELEASE</spring.version>
+        <spring-data-redis.version>2.1.3.RELEASE</spring-data-redis.version>
         <jose4j.version>0.5.0</jose4j.version>
         <logstash-logback-encoder.version>4.10</logstash-logback-encoder.version>
         <ojdbc8.version>12.2.0.1</ojdbc8.version>
@@ -67,6 +68,28 @@
             <groupId>no.nav.security</groupId>
             <artifactId>oidc-support</artifactId>
             <version>${oidc-spring-support.version}</version>
+        </dependency>
+
+        <!-- Redis/Caching -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>${spring-data-redis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <version>5.0.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
         </dependency>
 
         <!-- CXF -->
