--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 logging.config: classpath:logback-spring.xml
 
 redisSentinelPort: 26379
+redisSentinelHost: rfs-syfoperson
 redisMaster: mymaster
 
 management:
