--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
             <version>${cxf.version}</version>
         </dependency>
 
+        <!-- Rest -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jersey</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+
         <!-- Kotlin -->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
