Legger til enhetstest paa controller Mulighet for aa slette veileder/bruker tilknytninger
SYFOUTV-2620

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
+no.nav.security.oidc:
+  issuers: intern
+  issuer:
+    intern:
+      discoveryurl: <SETTES FRA FASIT>
+      accepted_audience: modiabrukerdialog-p,modiabrukerdialog-q1,veilarblogin-p,veilarblogin-q1
+      cookie_name: ID_token
+
 logging.config: classpath:logback-spring.xml
 
 management:
