--- a/nais.yaml
+++ b/nais.yaml
@@ -39,9 +39,14 @@ resources:
 fasitResources:
   exposed:
   used:
+  - alias: opam_oidc_discovery
+    resourceType: baseurl
+    propertyMap:
+      url: NO_NAV_SECURITY_OIDC_ISSUER_INTERN_DISCOVERYURL
   - alias: syfopersonDB
     resourceType: datasource
     propertyMap:
       url: SPRING_DATASOURCE_URL
       username: SPRING_DATASOURCE_USERNAME
       password: SPRING_DATASOURCE_PASSWORD
+
