Mulighet til aa hente persondata fra TPS paa brukerliste Filter til aa sette CORS-headere i request fra whitelistede origins Stotte for aa verifisere OIDC-tokens fra loginservice

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -17,6 +17,8 @@ server:
   servlet:
     context-path: /syfoperson
 
+no.nav.modig.security.sts.url: "sts.url"
+
 securitytokenservice.url: "sts.url"
 
 no.nav.security.oidc:
@@ -32,6 +34,9 @@ srvsyfoperson:
   password: "password"
 
 fasit.environment.name: 'local'
+
+mockPerson_V3: true
+mockAktoer_V2: true
 
 dev: true
 
