--- a/nais.yaml
+++ b/nais.yaml
@@ -39,6 +39,19 @@ resources:
 fasitResources:
   exposed:
   used:
+  - alias: srvsyfoperson
+    resourceType: credential
+  - alias: securityTokenService
+    resourceType: baseurl
+  - alias: virksomhet:Person_V3
+    resourceType: webserviceendpoint
+  - alias: Aktoer_v2
+    resourceType: webserviceendpoint
+  - alias: loginservice_oidc
+    resourceType: azureoidc
+    propertyMap:
+      discoveryUri: NO_NAV_SECURITY_OIDC_ISSUER_VEILEDER_DISCOVERYURL
+      clientId: NO_NAV_SECURITY_OIDC_ISSUER_VEILEDER_ACCEPTEDAUDIENCE
   - alias: opam_oidc_discovery
     resourceType: baseurl
     propertyMap:
