--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
     </distributionManagement>
 
     <properties>
+        <person-v3.version>3.4.1</person-v3.version>
+        <aktor-v2.version>1.0</aktor-v2.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -51,6 +53,19 @@
     </properties>
 
     <dependencies>
+
+        <!-- NAV-Tjenester -->
+        <dependency>
+            <groupId>no.nav.tjenester</groupId>
+            <artifactId>nav-person-v3-tjenestespesifikasjon</artifactId>
+            <version>${person-v3.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>no.nav.syfo.tjenester</groupId>
+            <artifactId>aktoer-v2</artifactId>
+            <version>${aktor-v2.version}</version>
+        </dependency>
 
         <!-- OIDC -->
         <dependency>
@@ -104,7 +119,6 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>${spring-boot.version}</version>
         </dependency>
-
 
         <!-- CXF -->
         <dependency>
