--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,14 @@
 no.nav.security.oidc:
-  issuers: intern
+  issuers: intern,veileder
   issuer:
     intern:
       discoveryurl: <SETTES FRA FASIT>
       accepted_audience: modiabrukerdialog-p,modiabrukerdialog-q1,veilarblogin-p,veilarblogin-q1,fpsak-frontend-p,fpsak-frontend-q1,fplos-p,fplos-q1
       cookie_name: ID_token
+    veileder:
+      discoveryurl: <SETTES FRA FASIT>
+      accepted_audience: <SETTES FRA FASIT>
+      cookie_name: isso-idtoken
 
 logging.config: classpath:logback-spring.xml
 
