--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,6 @@
 no.nav.security.oidc:
-  issuers: intern,veileder
+  issuers: veileder
   issuer:
-    intern:
-      discoveryurl: <SETTES FRA FASIT>
-      accepted_audience: modiabrukerdialog-p,modiabrukerdialog-q1,veilarblogin-p,veilarblogin-q1,fpsak-frontend-p,fpsak-frontend-q1,fplos-p,fplos-q1
-      cookie_name: ID_token
     veileder:
       discoveryurl: <SETTES FRA FASIT>
       accepted_audience: <SETTES FRA FASIT>
