--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -22,9 +22,9 @@ no.nav.modig.security.sts.url: "sts.url"
 securitytokenservice.url: "sts.url"
 
 no.nav.security.oidc:
-  issuers: intern
+  issuers: veileder
   issuer:
-    intern:
+    veileder:
       discoveryurl: http://metadata
       accepted_audience: aud-localhost
       cookie_name: localhost-idtoken
