Deler opp komponent-test
Bytter til Azure-tokens for authorisering

Legger inn data i H2 database til bruk i enhetstester

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -22,9 +22,13 @@ no.nav.modig.security.sts.url: "sts.url"
 securitytokenservice.url: "sts.url"
 
 no.nav.security.oidc:
-  issuers: intern
+  issuers: intern,veileder
   issuer:
     intern:
+      discoveryurl: http://metadata
+      accepted_audience: aud-localhost
+      cookie_name: localhost-idtoken
+    veileder:
       discoveryurl: http://metadata
       accepted_audience: aud-localhost
       cookie_name: localhost-idtoken
