--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <properties>
         <person-v3.version>3.4.1</person-v3.version>
         <aktor-v2.version>1.0</aktor-v2.version>
+        <egenansatt-v1.version>1.0.1</egenansatt-v1.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -58,6 +59,11 @@
             <groupId>no.nav.syfo.tjenester</groupId>
             <artifactId>aktoer-v2</artifactId>
             <version>${aktor-v2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>no.nav.syfo.tjenester</groupId>
+            <artifactId>egenAnsatt-v1-tjenestespesifikasjon</artifactId>
+            <version>${egenansatt-v1.version}</version>
         </dependency>
 
         <!-- OIDC -->
