Cache of WS-calls. Use Spring to configure Redis cache

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,3 +18,9 @@ management:
 server:
   servlet:
     context-path: /syfoperson
+
+spring:
+  cache.type: redis
+    redis:
+      host: redis-syfoperson.default.svc.nais.local
+      port: 6379
