--- a/pom.xml
+++ b/pom.xml
@@ -84,11 +84,11 @@
             <version>${oidc-spring-support.version}</version>
         </dependency>
 
-        <!-- Redis/Caching -->
+        <!-- EhCache -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-            <version>${spring-boot.version}</version>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.10.6</version>
         </dependency>
 
         <!-- CXF -->
@@ -180,6 +180,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
             <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.0.11.RELEASE</version>
         </dependency>
 
     </dependencies>
