--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -28,13 +28,8 @@ virksomhet:
   person.v3.endpointurl: "personv3.url"
   egenansatt.v1.endpointurl: "egenansattv1.url"
 
-mockPerson_V3: true
-mockAktoer_V2: true
-mockEgenAnsatt_V1: true
+aktoer.withmock: true
+egenansatt.withmock: true
+person.withmock: true
 
 tilgangskontrollapi.url: "https://tilgangskontroll.nais.no"
-
-dev: true
-
-
-
