Switch cache from Ehcache to external Redis

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,9 @@
+spring:
+  cache.type: redis
+  redis:
+    host: syfoperson-redis
+    port: 6379
+
 no.nav.security.oidc:
   issuers: veileder
   issuer:
