--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,19 +1,17 @@
-name: master
-on:
-  push:
-    branches:
-      - master
+name: main
+
+on: push
 
 env:
   IMAGE: docker.pkg.github.com/${{ github.repository }}/syfoperson:${{ github.sha }}
 
 jobs:
-  build-push-deploy:
+  build:
     name: Checkout code and create docker tag
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
+        uses: actions/checkout@v1
       - uses: actions/cache@v1
         with:
           path: ~/.gradle/caches
@@ -45,20 +43,30 @@ jobs:
           docker build --tag ${IMAGE} .
           docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
           docker push ${IMAGE}
-      - name: Deploy to Dev
-        uses: nais/deploy/actions/deploy@master
+          echo ${IMAGE}
+
+  deploy-dev:
+    if: github.ref == 'refs/heads/master'
+    name: Deploy to NAIS Dev-fss
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-fss
           RESOURCE: naiserator-dev.yaml
-      - name: Deploy to Prod
-        uses: nais/deploy/actions/deploy@master
+
+  deploy-prod:
+    if: github.ref == 'refs/heads/master'
+    name: Deploy to NAIS Prod-fss
+    needs: deploy-dev
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-fss
           RESOURCE: naiserator-prod.yaml
-      - name: Pling!
-        env:
-          COMMITER_NAME: ${{ github.event.pusher.name }}
-        run: curl -s "https://syfoping.herokuapp.com/regDeploy?deployedBy=$COMMITER_NAME&app=$APP_NAME"
-
