--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -57,6 +57,8 @@ spec:
       value: https://login.microsoftonline.com/navno.onmicrosoft.com/.well-known/openid-configuration
     - name: NO_NAV_SECURITY_JWT_ISSUER_VEILEDER_ACCEPTEDAUDIENCE
       value: 9b4e07a3-4f4c-4bab-b866-87f62dff480d
+    - name: DKIF_URL
+      value: https://dkif.nais.adeo.no
     - name: PDL_URL
       value: https://pdl-api.nais.adeo.no/graphql
     - name: SECURITY_TOKEN_SERVICE_REST_URL
