--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -23,6 +23,7 @@ srv.password: "password"
 
 fasit.environment.name: 'local'
 
+dkif.url: "https://dkif.nais.no"
 tilgangskontrollapi.url: "https://tilgangskontroll.nais.no"
 security.token.service.rest.url: "https://sts.nais.no"
 pdl.url: "https://pdl.nais.no"
