--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -2,7 +2,7 @@ apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
   name: syfoperson
-  namespace: default
+  namespace: teamsykefravr
   labels:
     team: teamsykefravr
 spec:
