Add provisioning of AzureAD v2 with Azurerator

--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -37,6 +37,21 @@ spec:
     - "https://syfoperson.dev.intern.nav.no"
     - "https://syfoperson.dev-fss-pub.nais.io"
     - "https://syfoperson.nais.preprod.local"
+  accessPolicy:
+    inbound:
+      rules:
+        - application: finnfastlege
+          namespace: teamsykefravr
+          cluster: dev-fss
+  azure:
+    application:
+      enabled: true
+      tenant: trygdeetaten.no
+      replyURLs:
+        - "https://syfoperson.dev.intern.nav.no/oauth2/callback"
+      claims:
+        extra:
+          - "NAVident"
   vault:
     enabled: true
     paths:
