Add version 2 of FastlegeApi for Modia
Version 2 of the Modia-api supports AzureAD V2.0 with on-behalf-of tokens.

:

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -7,12 +7,27 @@ server:
     context-path: /syfoperson
 
 no.nav.security.jwt:
-  issuers: veileder
   issuer:
     veileder:
       discoveryurl: http://metadata
       accepted_audience: aud-localhost
       cookie_name: localhost-idtoken
+    veilederaad:
+      discoveryurl: http://metadata
+      accepted_audience: aud-localhost
+      cookie_name: localhost-idtoken
+
+azure:
+  app:
+    client:
+      id: "1345678"
+      secret: "secret"
+  openid:
+    config:
+      token:
+        endpoint: "https://login.microsoftonline.com/id/oauth2/v2.0/token"
+
+syfotilgangskontroll.client.id: "syfotilgangskontrollId"
 
 srvsyfoperson:
   username: "username"
