--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,12 +5,16 @@ spring:
     port: 6379
 
 no.nav.security.jwt:
-  issuers: veileder
+  issuers: veileder,veilederaad
   issuer:
     veileder:
       discoveryurl: <nais-manifest>
       accepted_audience: <nais-manifest>
       cookie_name: isso-idtoken
+    veilederaad:
+      discoveryurl: ${azure.app.well.known.url}
+      accepted_audience: ${azure.app.client.id}
+      cookiename: ID_token
 
 logging.config: classpath:logback-spring.xml
 
