Change alerts to namespace default

--- a/.nais/alerts.yaml
+++ b/.nais/alerts.yaml
@@ -2,7 +2,7 @@ apiVersion: "nais.io/v1"
 kind: "Alert"
 metadata:
   name: syfoperson-alerts
-  namespace: default
+  namespace: teamsykefravr
   labels:
     team: teamsykefravr
 spec:
