Add endpoint to get Oppfolgingstilfelle from Syketilfelle

--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -82,5 +82,7 @@ spec:
       value: https://pdl-api.nais.preprod.local/graphql
     - name: SECURITY_TOKEN_SERVICE_REST_URL
       value: https://security-token-service.nais.preprod.local
+    - name: SYFOSYKETILFELLE_URL
+      value: "https://syfosyketilfelle.nais.preprod.local"
     - name: TILGANGSKONTROLLAPI_URL
       value: https://syfo-tilgangskontroll.nais.preprod.local/syfo-tilgangskontroll/api/tilgang
