--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -42,3 +42,4 @@ dkif.url: "https://dkif.nais.no"
 tilgangskontrollapi.url: "https://tilgangskontroll.nais.no"
 security.token.service.rest.url: "https://sts.nais.no"
 pdl.url: "https://pdl.nais.no"
+syfosyketilfelle.url: "https://syfosyketilfelle.nais.no"
