Add access policy for application Syfooversikt

--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -43,6 +43,9 @@ spec:
         - application: finnfastlege
           namespace: teamsykefravr
           cluster: dev-fss
+        - application: syfooversikt
+          namespace: teamsykefravr
+          cluster: dev-fss
   azure:
     application:
       enabled: true
