Grant Isdialogmote inbound access

--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -40,6 +40,9 @@ spec:
   accessPolicy:
     inbound:
       rules:
+        - application: isdialogmote
+          namespace: teamsykefravr
+          cluster: prod-gcp
         - application: finnfastlege
           namespace: teamsykefravr
           cluster: prod-fss
