--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -40,6 +40,9 @@ spec:
   accessPolicy:
     inbound:
       rules:
+        - application: isdialogmote
+          namespace: teamsykefravr
+          cluster: dev-gcp
         - application: finnfastlege
           namespace: teamsykefravr
           cluster: dev-fss
