--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -78,8 +78,10 @@ spec:
       value: "true"
     - name: DKIF_URL
       value: https://dkif.nais.adeo.no
+    - name: PDL_CLIENT_ID
+      value: "prod-fss.pdl.pdl-api"
     - name: PDL_URL
-      value: https://pdl-api.nais.adeo.no/graphql
+      value: "https://pdl-api.intern.nav.no/graphql"
     - name: SECURITY_TOKEN_SERVICE_REST_URL
       value: https://security-token-service.nais.adeo.no
     - name: SYFOSYKETILFELLE_URL
