--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -37,5 +37,6 @@ fasit.environment.name: 'local'
 dkif.url: "https://dkif.nais.no"
 tilgangskontrollapi.url: "https://tilgangskontroll.nais.no"
 security.token.service.rest.url: "https://sts.nais.no"
+pdl.client.id: "dev-fss.pdl.pdl-api"
 pdl.url: "https://pdl.nais.no"
 syfosyketilfelle.url: "https://syfosyketilfelle.nais.no"
