--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -34,7 +34,8 @@ srv.password: "password"
 
 fasit.environment.name: 'local'
 
-dkif.url: "https://dkif.nais.no"
+isproxy.client.id: "dev-fss.teamsykefravr.isproxy"
+isproxy.url: "https://isproxy.dev.intern.nav.no"
 tilgangskontrollapi.url: "https://tilgangskontroll.nais.no"
 security.token.service.rest.url: "https://sts.nais.no"
 pdl.client.id: "dev-fss.pdl.pdl-api"
