Replicate endpoint in Modiasyforest for request Navbruker from Syfomodiaperson
Move endpoint from Modiasyforest to Syfoperson to get one step closer to deleteting Modiasyforest.

--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -71,7 +71,7 @@ spec:
     - name: ISPROXY_CLIENT_ID
       value: "prod-fss.teamsykefravr.isproxy"
     - name: ISPROXY_URL
-      value: "https://isproxy.intern.nav.no"
+      value: "https://isproxy.prod-fss-pub.nais.io"
     - name: PDL_CLIENT_ID
       value: "prod-fss.pdl.pdl-api"
     - name: PDL_URL
