--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -71,7 +71,7 @@ spec:
     - name: ISPROXY_CLIENT_ID
       value: "dev-fss.teamsykefravr.isproxy"
     - name: ISPROXY_URL
-      value: "https://isproxy.dev.intern.nav.no"
+      value: "https://isproxy.dev-fss-pub.nais.io"
     - name: PDL_CLIENT_ID
       value: "dev-fss.pdl.pdl-api"
     - name: PDL_URL
