Replace calls to DKIF via Isproxy with calls to KRR in GCP

--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -55,6 +55,7 @@ spec:
         - host: "skjermede-personer-pip.intern.nav.no"
         - host: "syfo-tilgangskontroll.prod-fss-pub.nais.io"
       rules:
+        - application: digdir-krr-proxy
         - application: syfoperson-redis
   azure:
     application:
@@ -72,6 +73,10 @@ spec:
       value: "prod-fss.teamsykefravr.isproxy"
     - name: ISPROXY_URL
       value: "https://isproxy.prod-fss-pub.nais.io"
+    - name: KRR_CLIENT_ID
+      value: "prod-gcp.team-rocket.digdir-krr-proxy"
+    - name: KRR_URL
+      value: "https://digdir-krr-proxy.intern.nav.no"
     - name: PDL_CLIENT_ID
       value: "prod-fss.pdl.pdl-api"
     - name: PDL_URL
