Grant Syfomoteoversikt access to veileder-API

--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -45,6 +45,9 @@ spec:
         - application: syfomodiaperson
           namespace: teamsykefravr
           cluster: prod-fss
+        - application: syfomoteoversikt
+          namespace: teamsykefravr
+          cluster: prod-fss
         - application: syfooversikt
           namespace: teamsykefravr
           cluster: prod-fss
