--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -45,6 +45,9 @@ spec:
         - application: syfomodiaperson
           namespace: teamsykefravr
           cluster: dev-fss
+        - application: syfomoteoversikt
+          namespace: teamsykefravr
+          cluster: dev-fss
         - application: syfooversikt
           namespace: teamsykefravr
           cluster: dev-fss
