Include doedsdato in person-response

--- a/.nais/alerts.yaml
+++ b/.nais/alerts.yaml
@@ -12,8 +12,8 @@ spec:
       prependText: '<!here> | '
   alerts:
     - alert: SYFOPERSON IS DOWN
-      expr: up{app="syfoperson", job="kubernetes-pods"} == 0
-      for: 5m
+      expr: sum(up{app="syfoperson", job="kubernetes-pods"}) == 0
+      for: 30s
       description: "Det er ingen pods for app kjørende i namespace og dermed er appen nede"
       action: "Undersøk hvorfor pods er nede og få den kjørende igjen!"
       severity: danger
