Remove old dev ingress

--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -35,7 +35,6 @@ spec:
     enabled: true
     path: /internal/metrics
   ingresses:
-    - "https://syfoperson.dev.intern.nav.no"
     - "https://syfoperson.intern.dev.nav.no"
   accessPolicy:
     inbound:
@@ -77,7 +76,7 @@ spec:
     - name: KRR_CLIENT_ID
       value: "dev-gcp.team-rocket.digdir-krr-proxy"
     - name: KRR_URL
-      value: "https://digdir-krr-proxy.dev.intern.nav.no"
+      value: "https://digdir-krr-proxy.intern.dev.nav.no"
     - name: PDL_CLIENT_ID
       value: "dev-fss.pdl.pdl-api"
     - name: PDL_URL
