Add missing access policy

--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -61,6 +61,7 @@ spec:
         - host: "syfo-tilgangskontroll.prod-fss-pub.nais.io"
       rules:
         - application: digdir-krr-proxy
+          namespace: team-rocket
         - application: syfoperson-redis
   azure:
     application:
