--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -61,6 +61,7 @@ spec:
         - host: "syfo-tilgangskontroll.dev-fss-pub.nais.io"
       rules:
         - application: digdir-krr-proxy
+          namespace: team-rocket
         - application: syfoperson-redis
   azure:
     application:
