--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -62,6 +62,7 @@ spec:
       rules:
         - application: digdir-krr-proxy
           namespace: team-rocket
+          cluster: prod-gcp
         - application: syfoperson-redis
   azure:
     application:
