--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -59,10 +59,8 @@ spec:
         - host: "pdl-api.prod-fss-pub.nais.io"
         - host: "skjermede-personer-pip.intern.nav.no"
         - host: "syfo-tilgangskontroll.prod-fss-pub.nais.io"
+        - host: "digdir-krr-proxy.intern.nav.no"
       rules:
-        - application: digdir-krr-proxy
-          namespace: team-rocket
-          cluster: prod-gcp
         - application: syfoperson-redis
   azure:
     application:
