Add missing access policy

--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -59,7 +59,7 @@ spec:
         - host: "pdl-api.dev-fss-pub.nais.io"
         - host: "skjermede-personer-pip.dev.intern.nav.no"
         - host: "syfo-tilgangskontroll.dev-fss-pub.nais.io"
-        - host: "digdir-krr-proxy.intern.dev.nav.no"
+        - host: "digdir-krr-proxy.dev.intern.nav.no"
       rules:
         - application: syfoperson-redis
   azure:
@@ -76,7 +76,7 @@ spec:
     - name: KRR_CLIENT_ID
       value: "dev-gcp.team-rocket.digdir-krr-proxy"
     - name: KRR_URL
-      value: "https://digdir-krr-proxy.intern.dev.nav.no"
+      value: "https://digdir-krr-proxy.dev.intern.nav.no"
     - name: PDL_CLIENT_ID
       value: "dev-fss.pdl.pdl-api"
     - name: PDL_URL
