--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -54,9 +54,9 @@ spec:
     outbound:
       external:
         - host: "pdl-api.prod-fss-pub.nais.io"
-        - host: "syfo-tilgangskontroll.prod-fss-pub.nais.io"
       rules:
         - application: syfoperson-redis
+        - application: syfo-tilgangskontroll
         - application: digdir-krr-proxy
           namespace: team-rocket
         - application: skjermede-personer-pip
@@ -87,6 +87,6 @@ spec:
     - name: SKJERMEDEPERSONERPIP_URL
       value: "http://skjermede-personer-pip.nom"
     - name: SYFOTILGANGSKONTROLL_CLIENT_ID
-      value: "prod-fss.teamsykefravr.syfo-tilgangskontroll"
+      value: "prod-gcp.teamsykefravr.syfo-tilgangskontroll"
     - name: SYFOTILGANGSKONTROLL_URL
-      value: "https://syfo-tilgangskontroll.prod-fss-pub.nais.io"
+      value: "http://syfo-tilgangskontroll"
