IS-1689: Use istilgangskontroll

--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -39,23 +39,15 @@ spec:
     inbound:
       rules:
         - application: finnfastlege
-          namespace: teamsykefravr
-          cluster: prod-gcp
         - application: syfomodiaperson
-          namespace: teamsykefravr
-          cluster: prod-gcp
         - application: syfomoteoversikt
-          namespace: teamsykefravr
-          cluster: prod-gcp
         - application: syfooversikt
-          namespace: teamsykefravr
-          cluster: prod-gcp
     outbound:
       external:
         - host: "pdl-api.prod-fss-pub.nais.io"
       rules:
         - application: syfoperson-redis
-        - application: syfo-tilgangskontroll
+        - application: istilgangskontroll
         - application: digdir-krr-proxy
           namespace: team-rocket
         - application: skjermede-personer-pip
@@ -85,7 +77,7 @@ spec:
       value: "prod-gcp.nom.skjermede-personer-pip"
     - name: SKJERMEDEPERSONERPIP_URL
       value: "http://skjermede-personer-pip.nom"
-    - name: SYFOTILGANGSKONTROLL_CLIENT_ID
-      value: "prod-gcp.teamsykefravr.syfo-tilgangskontroll"
-    - name: SYFOTILGANGSKONTROLL_URL
-      value: "http://syfo-tilgangskontroll"
+    - name: ISTILGANGSKONTROLL_CLIENT_ID
+      value: "prod-gcp.teamsykefravr.istilgangskontroll"
+    - name: ISTILGANGSKONTROLL_URL
+      value: "http://istilgangskontroll"
