IS-2765: Bruke felles Aiven-cache

--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -62,8 +62,9 @@ spec:
       claims:
         extra:
           - "NAVident"
-  envFrom:
-    - secret: redis-teamsykefravr-syfoveileder
+  redis:
+    - instance: syfoveileder
+      access: readwrite
   observability:
     autoInstrumentation:
       enabled: true
