IS-2765: Bruke felles Aiven-cache

--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -62,7 +62,7 @@ spec:
         extra:
           - "NAVident"
   redis:
-    - instance: syfoveileder
+    - instance: cache
       access: readwrite
   observability:
     autoInstrumentation:
